--- a/tic-tac-toe-app/src/app/board/board.component.html
+++ b/tic-tac-toe-app/src/app/board/board.component.html
@@ -1,9 +1,9 @@
 <h1>Tic Tac Toe</h1>
 <p>Current player: {{ currentPlayer }}</p>
-<button (click)="newGame()">Start New Game</button>
+<button class="start" (click)="newGame()">Start New Game</button>
 
 <h2 *ngIf="winner">
-    Player {{ winner }} won the game!
+    Player {{ winner }} won!
 </h2>
 <main>
     <app-square 
