--- a/tic-tac-toe-app/src/app/board/board.component.scss
+++ b/tic-tac-toe-app/src/app/board/board.component.scss
@@ -1,10 +1,38 @@
 main {
   display: grid;
-  grid-template-columns: 200px 200px 200px;
-  grid-gap: 0px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
+  width: 300px;
+  height: 300px;
+  margin-bottom: 1.5rem;
 }
 
 app-square {
   border: 1px gray solid;
   height: 200px;
+}
+
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+button.start {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background: #607d8b;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 1.5rem;
+
+  &:hover {
+    background: #455a64;
+  }
 }
